# TicTacToe

./: .travis.yml  CMakeLists.txt  Dockerfile  Readme.md  TicTacToe.pro  build.sh  build_on_docker.sh  buildinfo.cpp  buildinfo.h  buildinfo.ui  config.h.in  git.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tictactoecore.cpp  tictactoecore.h  widget.cpp  widget.h  widget.ui
.github/workflows/: formatter.yml  ubuntu.yml
